--- a/index.html
+++ b/index.html
@@ -1,47 +1,262 @@
-<!DOCTYPE html>
-<html lang="ar">
+<!doctype html>
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>صفحة تسجيل الدخول</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>مولّد كلمات مرور</title>
   <style>
-    body {
-      background-color: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 100px;
+    /* تصميم بسيط ومرتب */
+    :root{
+      --bg:#0b1220; --card:#0f1724; --accent:#2563eb; --good:#10b981; --warn:#f59e0b; --danger:#ef4444;
+      --muted:#9fb8df;
     }
-
-    input {
-      margin: 8px;
-      padding: 8px;
-      border-radius: 5px;
-      border: none;
+    body{
+      margin:0; padding:20px; font-family:system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background:linear-gradient(180deg, #051025, #071428); color:#e6eef8; display:flex; justify-content:center;
     }
-
-    input[type="submit"] {
-      background-color: white;
-      color: black;
-      font-weight: bold;
-      cursor: pointer;
+    .card{
+      width:100%; max-width:760px; background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+      border-radius:12px; padding:20px; box-shadow:0 10px 30px rgba(2,6,23,0.7);
     }
+    h1{ margin:0 0 8px 0; font-size:20px; text-align:center }
+    .row{ display:flex; gap:12px; flex-wrap:wrap; align-items:center; margin-bottom:12px; }
+    label{ font-size:13px; color:var(--muted); display:block; margin-bottom:6px }
+    input[type="number"], select, .chip{ background:transparent; border:1px solid rgba(255,255,255,0.06);
+      color:inherit; padding:8px 10px; border-radius:8px; min-width:120px; }
+    .chip{ display:inline-flex; align-items:center; gap:8px; cursor:pointer; padding:8px 10px; }
+    button{
+      background:var(--accent); color:white; border:0; padding:10px 14px; border-radius:8px; cursor:pointer;
+    }
+    .result{
+      margin-top:10px; background:rgba(255,255,255,0.02); padding:12px; border-radius:10px; display:flex; gap:12px;
+      align-items:center; justify-content:space-between; font-family:monospace;
+    }
+    .small{ font-size:13px; color:var(--muted) }
+    .controls-col{ display:flex; flex-direction:column; gap:8px; min-width:180px; }
+    .switch{ display:flex; align-items:center; gap:8px; }
+    .copy-btn{ background:#06b6d4; color:black; border-radius:8px; padding:8px 12px; font-weight:700 }
+    .sec{ font-size:14px; color:var(--muted) }
+    .strength-bar{ height:10px; border-radius:8px; background:rgba(255,255,255,0.06); overflow:hidden }
+    .strength-fill{ height:100%; width:0%; background:var(--warn); transition:width .25s ease; }
+    .list-area{ margin-top:10px; max-height:220px; overflow:auto; background:rgba(0,0,0,0.2); padding:8px; border-radius:8px; font-family:monospace }
+    footer{ margin-top:12px; text-align:center; font-size:13px; color:var(--muted) }
+    @media(max-width:560px){ .row{ flex-direction:column; align-items:stretch } .controls-col{ min-width:unset } }
   </style>
 </head>
 <body>
-  <h1>تسجيل الدخول</h1>
-  <form>
-    <label>الإيميل:</label><br>
-    <input type="email" name="email"><br><br>
+  <div class="card">
+    <h1>مولّد كلمات مرور آمن</h1>
+    <div class="row">
+      <div class="controls-col">
+        <label>طول كلمة المرور</label>
+        <input id="length" type="number" min="4" max="128" value="16" />
+      </div>
 
-    <label>كلمة المرور:</label><br>
-    <input type="password" name="password"><br><br>
+      <div class="controls-col">
+        <label>أنواع الحروف</label>
+        <div style="display:flex; gap:8px; flex-wrap:wrap;">
+          <label class="chip"><input id="lower" type="checkbox" checked /> حروف صغيرة (a-z)</label>
+          <label class="chip"><input id="upper" type="checkbox" checked /> حروف كبيرة (A-Z)</label>
+          <label class="chip"><input id="nums" type="checkbox" checked /> أرقام (0-9)</label>
+          <label class="chip"><input id="syms" type="checkbox" checked /> رموز (!@#...)</label>
+        </div>
+      </div>
 
-    <input type="submit" value="دخول">
-  </form>
-</body>
-</html>
-</head>
-<body>
-  <a class="btn" href="https://instagram.com" target="_blank" rel="noopener noreferrer">ادخل الموقع</a>
+      <div class="controls-col">
+        <label>خيارات إضافية</label>
+        <div style="display:flex; gap:8px; flex-direction:column;">
+          <label class="switch"><input id="noAmbiguous" type="checkbox" /> استبعاد أحرف مُشابهة (0 O 1 l)</label>
+          <label class="switch"><input id="avoidRepeat" type="checkbox" /> منع تكرار الحرف المتكرر</label>
+        </div>
+      </div>
+
+      <div style="display:flex; flex-direction:column; gap:8px; align-items:flex-end;">
+        <label>كمية كلمات للإنشاء</label>
+        <input id="count" type="number" min="1" max="50" value="1" style="width:96px; text-align:center"/>
+        <button id="genBtn">انشئ</button>
+      </div>
+    </div>
+
+    <div class="result" id="resultBox">
+      <div style="flex:1;">
+        <div class="small">النتيجة</div>
+        <div id="resultText" style="font-size:15px; margin-top:6px;">اضغط "انشئ" للحصول على كلمة المرور</div>
+        <div style="margin-top:8px;">
+          <div class="small">قوة كلمة المرور</div>
+          <div class="strength-bar" style="margin-top:6px;"><div id="strengthFill" class="strength-fill"></div></div>
+          <div id="entropy" class="sec" style="margin-top:6px;">تقريبى: - bits</div>
+        </div>
+      </div>
+
+      <div style="display:flex; flex-direction:column; gap:8px; margin-left:12px;">
+        <button class="copy-btn" id="copyBtn">نسخ</button>
+        <button id="regen" style="background:#f59e0b; color:black; padding:8px 12px; border-radius:8px;">أعد الإنشاء</button>
+        <button id="downloadBtn" style="background:#10b981; color:black; padding:8px 12px; border-radius:8px;">تحميل TXT</button>
+      </div>
+    </div>
+
+    <div class="small" style="margin-top:10px;">قائمة النتائج (لو إخترت أكثر من 1)</div>
+    <div id="listArea" class="list-area">لا توجد نتائج بعد.</div>
+
+    <footer> a5m5r.</footer>
+  </div>
+
+  <script>
+    // أحرف
+    const LOWER = 'abcdefghijklmnopqrstuvwxyz';
+    const UPPER = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ';
+    const NUMS  = '0123456789';
+    const SYMS  = '!@#$%^&*()-_=+[]{}<>?,./:;|~';
+
+    const AMBIG = {
+      '0':'O','O':'0','1':'l','l':'1','I':'1','o':'0'
+    };
+
+    // عناصر
+    const lengthInput = document.getElementById('length');
+    const lowerCb = document.getElementById('lower');
+    const upperCb = document.getElementById('upper');
+    const numsCb = document.getElementById('nums');
+    const symsCb = document.getElementById('syms');
+    const noAmb = document.getElementById('noAmbiguous');
+    const avoidRepeat = document.getElementById('avoidRepeat');
+    const countInput = document.getElementById('count');
+    const genBtn = document.getElementById('genBtn');
+    const resultText = document.getElementById('resultText');
+    const listArea = document.getElementById('listArea');
+    const copyBtn = document.getElementById('copyBtn');
+    const regenBtn = document.getElementById('regen');
+    const strengthFill = document.getElementById('strengthFill');
+    const entropyEl = document.getElementById('entropy');
+    const downloadBtn = document.getElementById('downloadBtn');
+
+    function buildPool(){
+      let pool = '';
+      if(lowerCb.checked) pool += LOWER;
+      if(upperCb.checked) pool += UPPER;
+      if(numsCb.checked) pool += NUMS;
+      if(symsCb.checked) pool += SYMS;
+      if(noAmb.checked){
+        // نزيل الأحرف اللي موجودة في AMBIG
+        pool = pool.split('').filter(ch => !(ch in AMBIG)).join('');
+      }
+      return pool;
+    }
+
+    function secureRandomInt(max){
+      // ارجع عدد عشوائي من 0 إلى max-1 باستعمال crypto
+      const arr = new Uint32Array(1);
+      window.crypto.getRandomValues(arr);
+      return arr[0] % max;
+    }
+
+    function generateOne(len, pool){
+      if(pool.length === 0) return '[خطأ: اختر نوع واحد على الأقل]';
+      if(len > pool.length && avoidRepeat.checked){
+        // لو المستخدم طلب منع التكرار وطول أكبر من حجم المجموعة -> نسمح بالتكرار أو نرجّع خطأ
+        // نختار أن نسمح بالتكرار بعد تنبيه صغير عبر إعادة توليد لكن نضمن تنبيه المستخدم
+      }
+      let out = '';
+      const used = new Set();
+      for(let i=0;i<len;i++){
+        let ch;
+        // محاولة توليد بدون تكرار إذا مطلوب
+        if(avoidRepeat.checked && used.size < pool.length){
+          // اختر حرف غير مستخدم
+          let attempts = 0;
+          do {
+            ch = pool[secureRandomInt(pool.length)];
+            attempts++;
+            if(attempts > 50) break;
+          } while(used.has(ch));
+          used.add(ch);
+        } else {
+          ch = pool[secureRandomInt(pool.length)];
+        }
+        out += ch;
+      }
+      return out;
+    }
+
+    function calcEntropy(poolSize, length){
+      // تقدير تقريبي: entropy = log2(poolSize^length) = length * log2(poolSize)
+      if(poolSize <= 0) return 0;
+      return length * Math.log2(poolSize);
+    }
+
+    function updateStrengthUI(entropy){
+      entropy = Math.round(entropy*10)/10;
+      entropyEl.textContent = 'تقدير الأمان: ' + entropy + ' بت (bits)';
+      const percent = Math.min(100, Math.round((entropy/80)*100)); // 80bits يعتبر قوي جدًا
+      strengthFill.style.width = percent + '%';
+      if(entropy < 28){
+        strengthFill.style.background = 'var(--danger)';
+      } else if(entropy < 50){
+        strengthFill.style.background = 'var(--warn)';
+      } else {
+        strengthFill.style.background = 'var(--good)';
+      }
+    }
+
+    function generateAll(){
+      const len = Math.max(4, Math.min(128, Math.floor(Number(lengthInput.value) || 16)));
+      const cnt = Math.max(1, Math.min(50, Math.floor(Number(countInput.value) || 1)));
+      const pool = buildPool();
+      const poolSize = pool.length;
+      const arr = [];
+      for(let i=0;i<cnt;i++){
+        let pw = generateOne(len, pool);
+        // لو منع التكرار وطلب طول أكبر من pool, قد يحصل تكرار — هنا نتحقق ونعدل لو لزم
+        arr.push(pw);
+      }
+      // عرض أول عنصر في الصندوق
+      resultText.textContent = arr[0] || '';
+      listArea.innerHTML = arr.map((p, idx) =><div style="padding:6px 4px; border-bottom:1px dashed rgba(255,255,255,0.03)">${idx+1}. ${p}</div>).join('');
+      updateStrengthUI(calcEntropy(poolSize, len));
+      // لو poolSize أقل من len مع avoidRepeat مطلوب، نعرض تحذير
+      if(avoidRepeat.checked && poolSize < len){
+        listArea.innerHTML += <div style="padding:8px; color:var(--warn)">تحذير: عدد الأحرف المسموح بها (${poolSize}) أصغر من الطول المطلوب (${len}) — تم السماح بالتكرار.</div>;
+      }
+    }
+
+    genBtn.addEventListener('click', generateAll);
+    regenBtn.addEventListener('click', generateAll);
+
+    copyBtn.addEventListener('click', async ()=>{
+      const text = resultText.textContent || '';
+      try{
+        await navigator.clipboard.writeText(text);
+        copyBtn.textContent = 'نسخ ✅';
+        setTimeout(()=>copyBtn.textContent = 'نسخ', 1200);
+      } catch(e){
+        alert('فشل النسخ التلقائي — انسخ يدوياً:\n' + text);
+      }
+    });
+
+    downloadBtn.addEventListener('click', ()=>{
+      const items = Array.from(listArea.querySelectorAll('div')).map(d => d.textContent.replace(/^\d+\.\s*/, '').trim());
+      if(items.length === 0 || items[0] === 'لا توجد نتائج بعد.') {
+        alert('لا توجد نتائج لتحميل — أنشئ كلمات مرور أولاً.');
+        return;
+      }
+      const blob = new Blob([items.join('\n')], {type: 'text/plain;charset=utf-8'});
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.href = url;
+      a.download = 'passwords.txt';
+      document.body.appendChild(a);
+      a.click();
+      a.remove();
+      URL.revokeObjectURL(url);
+    });
+
+    // اختصار Enter
+    document.addEventListener('keydown', (e)=>{
+      if(e.key === 'Enter') generateAll();
+    });
+
+    // توليد أولي خفيف
+    //generateAll();
+  </script>
 </body>
 </html>
