--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <script>
       // ======= CONFIG: عدل هنا =======
       const CONFIG = {
-        password: "S3cr3t!a51234",      // <-- اكتب هنا كلمة المرور اللي تحب
+        password: "amr12345",      // <-- اكتب هنا كلمة المرور اللي تحب
         secretUrl: "https://www.instagram.com/kali_2v?igsh=MjlzeHp4ZG8wN2g3 " // <-- اكتب هنا الرابط السري
       };
       // ======= نهاية التعديل =======
@@ -149,3 +149,4 @@
 </script>
 </body>
 </html>
+
