--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title> ملف مشفر a5</title>
+  <title> *# hashcat #* </title>
   <style>
     :root{
       --bg:#020316; --card:#071028; --accent:#0b84ff; --muted:#9aa6b2; --ok:#7fffb2; --err:#ff6b6b;
@@ -47,10 +47,10 @@
 <body>
   <div class="card" role="main" aria-labelledby="title">
     <header>
-      <div class="logo">a5</div>
+      <div class="logo">i5</div>
       <div>
-        <h1 id="title">a5m5r</h1>
-        <p class="lead">01010101011</p>
+        <h1 id="title">hashcat</h1>
+        <p class="lead"> hash -1</p>
       </div>
     </header>
 
@@ -79,8 +79,8 @@
 
     <div id="secretBox" class="secret" aria-hidden="true">
       <div>
-        <div class="tiny">تم التحقق — الرابط السري:</div>
-        <a id="secretLink" href="#" target="_blank" rel="noopener">فتح الرابط</a>
+        <div class="tiny">/../../../../ open /../../../../:</div>
+        <a id="secretLink" href="#" target="_blank" rel="noopener">open -1</a>
       </div>
       <div>
         <button id="copy" class="copyBtn">نسخ</button>
@@ -88,7 +88,7 @@
     </div>
 
     <div class="meta">
-     a5 101010
+     i5
     </div>
   </div>
 
@@ -149,4 +149,3 @@
 </script>
 </body>
 </html>
-
