--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ h1{
 
 <!-- شاشة كلمة السر -->
 <div class="password-screen" id="passwordScreen">
-  <h2>🌹 أدخل كلمة السر للدخول 🌹</h2>
+  <h2>افتحى يا بعد روحى </h2>
   <input type="password" id="password" class="password-input" placeholder="••••••••">
   <br>
   <button class="enter-btn" onclick="checkPassword()">دخول</button>
@@ -159,12 +159,12 @@ h1{
 <div class="love-page" id="lovePage">
   <h1>بحبك يا زينب ❤️</h1>
   <div class="buttons">
-    <button class="love-btn" onclick="showMessage('msg1')">افتحى يا بعد روحى 💋</button>
+    <button class="love-btn" onclick="showMessage('msg1')"> رساله اليوم لمراتى</button>
     <button class="love-btn" onclick="showMessage('msg2')">ل مراتى حبيبتى 💖</button>
   </div>
 
-  <div id="msg1" class="message">احبك مزتى العراقيه الى تخبل 💞</div>
-  <div id="msg2" class="message">الحياه بدونك مش حياه يا اختى حبيبتى ❤️</div>
+  <div id="msg1" class="message"> عيونى ما تشوف غير زينب</div>
+  <div id="msg2" class="message"> طمنى قلبك انا بعشقك يمراتى يحبيبتى</div>
 </div>
 
 <script>
@@ -203,3 +203,4 @@ function showMessage(id){
 
 </body>
 </html>
+
