--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>بحبك يا زينب ❤️</title>
+<title>ILOVE YOU ZOZO</title>
 <style>
 *{box-sizing:border-box}
 body{
@@ -178,3 +178,4 @@ function showMessage(id){
 
 </body>
 </html>
+
